--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,7 @@ html {
 }
 
 body {
-    background-color: #F24C4C;
     background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23EC9B3B' fill-opacity='0.5'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-    color: white;
     font-size: 1.6rem;
     font-family: 'Mulish', sans-serif;
 }
@@ -141,20 +139,22 @@ img {
 .portada__data {
     background-color: #00000095;
     padding: 15px;
-    width: 60%;
+    /* width: 60%; */
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 6px;
 }
 
 .button {
-    align-self: start;
-    display: inline-block;
-    text-align: center;
-    padding: 10px;
-    margin: 6px 0 0 0;
+    /* align-self: start; */
+    display: inline;
+    /* text-align: center; */
+    padding: 4px 10px;
+    /* margin: 6px 0 0 0; */
     border-radius: 10px;
-    font-weight: 900;
+    font-weight: 800;
     background-color: #F24C4C;
     box-shadow: 2px 2px 5px #000f;
 }
@@ -189,8 +189,7 @@ img {
 
 .card a {
     display: inline-block;
-    padding: 10px 0;
-    color: #EC9B3B;
+    /* padding: 5px 0; */
     font-size: 1.8rem;
     font-weight: 900;
 }
@@ -201,21 +200,11 @@ img {
 
 /* BANNER */
 .banner {
-    width: 100%;
     height: 300px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     color: white;
-}
-
-.content {
-    background-color: #00000095;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 56%;
-    padding: 20px;
 }
 
 .banner--1 {
@@ -226,32 +215,24 @@ img {
     background: url(./assets/pexels-pixabay-301920.jpg) no-repeat center center/cover;
 }
 
-.social {
-    width: 100%;
-    text-align: center;
-    margin: 0 auto;
-    padding: 10px 0;
-}
-
 .social p {
     font-size: 2rem;
     padding: 5px;
 }
 
 .links {
-    /* background-color: red; */
-    display: flex;
-    justify-content: space-evenly;
-    gap: 10px;
     align-items: center;
-    width: 80%;
-    margin: 10px auto;
+    margin: 0 auto;
 }
 
-.links a {
+div a i{
     font-size: 3rem;
 }
 
 form {
     font-size: 1.4rem;
+}
+
+.cr__img {
+    height: 70vh;
 }
